--- a/dos33.html
+++ b/dos33.html
@@ -6120,7 +6120,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3A2C:9B 9D 9E       074             DFB $9B,$9D,$9E                                 ; there was a HEX pseudo-mnemonic
 3A2F:9F A6 A7       075             DFB $9F,$A6,$A7                                 ; so we could group these in 4 bytes ...
 3A32:AB AC AD       076             DFB $AB,$AC,$AD                                 ; ... maybe one day. :)
-3A35:AE AF B2       077             DFB $AE,$AF,$B2                                 ; NOTE: Also see <a href="#NIBL">NIBL</a> and <a href="#PD2">PD2</a>
+3A35:AE AF B2       077             DFB $AE,$AF,$B2                                 ; NOTE: Also see <a class='v' href="#NIBL">NIBL</a> and <a class='v' href="#PD2">PD2</a>
 3A38:B3 B4 B5       078             DFB $B3,$B4,$B5
 3A3B:B6 B7 B9       079             DFB $B6,$B7,$B9
 3A3E:BA BB BC       080             DFB $BA,$BB,$BC
