--- a/dos33.html
+++ b/dos33.html
@@ -152,6 +152,7 @@ h2 {
 /* Track/Sector */
 b.ts {
     color: #F00;
+/*    background-color: #00F; */
 }
 
 
@@ -2838,7 +2839,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 28F1:49 4E D4       030             DCI "INT"
 28F4:42 53 41 56 C5 031             DCI "BSAVE"$
 28F9:42 4C 4F 41 C4 032             DCI "BLOAD"$
-28FE:42 52 55 CE    033             DCI "BRUN"$                                     ; === <a class='ts' name='T1S8'>T1S8</a>
+28FE:42 52 55 CE    033             DCI "BRUN"$                                     ; === <a class='ts' name='T1S8'>T1S8</a> ===
 2902:56 45 52 49    034             DCI "VERIFY"
 2906:46 D9
 2908:00             035             DFB 0                                           ; end sentinel, see <span class='todo'>TODO</span>
