Fix misc. missing end tags

--- a/dos33.html
+++ b/dos33.html
@@ -958,7 +958,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1D7C:67 10          085             DW <a class="x" href="#ASBRK2" >ASBRK2 </a>                                      ;c[-]
 1D7E:84 1D          086             DW <a class="x" href="#DBINIT" >DBINIT </a>                                      ;d[<a class='line' href='#RELOCTR.298'>5</a>]
 1D80:3C 0C          087             DW <a class="x" href="#ASCNTU2">ASCNTU2</a>                                      ;e    Continue (Warm Restart) and R*s*E*q ???
-1D82:F2 0C          088             DW <a class="x" href="#ASRSEQ2">ASRSEQ2</a>                                      ;f    See Applesoft source Line #70 <a href='https://github.com/mist64/msbasic/blob/master/program.s#L70'>RESTART</a> and Line #270 <a href='https://github.com/mist64/msbasic/blob/master/program.s#L270'>FIX LINKS</a>
+1D82:F2 0C          088             DW <a class="x" href="#ASRSEQ2">ASRSEQ2</a>                                      ;f    See Applesoft source Line #70 <a class='link' href='https://github.com/mist64/msbasic/blob/master/program.s#L70'>RESTART</a> and Line #270 <a class='link' href='https://github.com/mist64/msbasic/blob/master/program.s#L270'>FIX LINKS</a>
                     089 <a class="d" name="AS2VTL"   >AS2VTL      </a>EQU *-<a class="v" href="#AS2VT">AS2VT</a>
                     090             PAGE
                     091 ;
@@ -4670,7 +4670,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3457:FF FF FF FF                                                                    ; [9C]=T19 an <i>additional</i> 15 sectors! (Boot sector would display text)
 345B:FF FF FF FF                                                                    ; [A0]=T1A See File <a class="file" href="#FLOCSEC">FLOCSEC</a>, Func <a class="x" href="#GETSEC">GETSEC</a>, Line <span class="todo">TODO</span>
 345F:FF FF FF FF                                                                    ; [A4]=T1B The <b>smart</b> thing to have done would be to
-3463:FF FF FF FF                                                                    ; [A8]=T1C put the VTOC and CATALOG on <a class='ts'>T0SF</a> - <a class='ts'>T0S1</b>
+3463:FF FF FF FF                                                                    ; [A8]=T1C put the VTOC and CATALOG on <a class='ts'>T0SF</a> - <a class='ts'>T0S1</a>
 3467:FF FF FF FF                                                                    ; [AC]=T1D That way <b>both</b> a bootable and data disk would
 346B:FF FF FF FF                                                                    ; [B0]=T1E get an extra 16 sectors of free disk space.
 346F:FF FF FF FF                                                                    ; [B4]=T1F 
@@ -5306,7 +5306,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     436 
 
 
-<hr><hr class='join'>=== <a class="file" name="COREQUS">COREQUS</a> - Core Equates, Page <a class="page" name="page24">24</a>, <a class='ts'>n/a</b>, $<span class='n'>n/a</span> ===<hr class='join'><hr>
+<hr><hr class='join'>=== <a class="file" name="COREQUS">COREQUS</a> - Core Equates, Page <a class="page" name="page24">24</a>, <a class='ts'>n/a</a>, $<span class='n'>n/a</span> ===<hr class='join'><hr>
                     001 
                     002 
                     003 
@@ -7048,7 +7048,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3EAE:60             302 <a class="f" name="SETRTS"     id="SETRTS"    >SETRTS      </a>RTS
 
 
-<hr><hr class='join'>=== <a class="file" name="FORMATR">FORMATR</a> - Format Disk, Page <a class="page" name="page82">82</a>, <a class='ts' href='#T0S8'>T0S8</a> @ $AF..  <a class='ts' href='#T0S9'>T0S9</b> @ $C7, $<span class='n'>BEAF</span> .. $<span class='n'>BFC7</span> ===<hr class='join'><hr>
+<hr><hr class='join'>=== <a class="file" name="FORMATR">FORMATR</a> - Format Disk, Page <a class="page" name="page82">82</a>, <a class='ts' href='#T0S8'>T0S8</a> @ $AF..  <a class='ts' href='#T0S9'>T0S9</a> @ $C7, $<span class='n'>BEAF</span> .. $<span class='n'>BFC7</span> ===<hr class='join'><hr>
                     001                SBTL '16-SECTOR FORMATTER'
                     002 ****************************
                     003 *                          *
