--- a/dos33.html
+++ b/dos33.html
@@ -5,7 +5,7 @@
 === Page <a class="page" name="page1"></a> ===
 <a class='mem' name='_1D7D'>wastes</a>
 <a class="f" name="CORRECTVOL" id="CORRECTVOL" >CORRECTVOL  </a>
-<a class="f" name="_8"       >12_         </a>
+<a class='f' name='_8'       >12_         </a>
                         25          37              53                              85  89  93
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
 
@@ -1299,43 +1299,43 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     176 
                     177 
                     178 
-                    179 
-                    180 
-                    181 
-                    182 
-                    183 
-                    184 
-                    185 
-                    186 
-                    187 
-                    188 
-                    189 
-                    190 
-                    191 
-                    192 
-                    193 
-                    194 
-                    195 
-                    196 
-                    197 
-                    198 
-                    199 
-                    200 
-                    201 
-                    202 
-                    203 
-                    204 
-                    205 
-                    206 
-                    207 
-                    208 
-                    209 
-                    210 
-                    211 
-                    212 
-                    213 
-                    214 
-                    215 
+<hr>                    179             LDA #$<span class='n'>8D</span>        ; CARRAGE RETURN                ; === Page #<a class='page' name='page47'>47</a>=== <a class='magic'>magic number</a> CR_HI
+                    180             STA <a class='v' href='#LBUFF'>LBUFF</a>       ; TO OUT BUFFER
+                    181             LDX #<span class='n'>0</span>          ; RESET TO SOL                  ; StartOfLine
+                    182             STX <a class='v' href='#SVX'>SVX</a>
+                    <a class='line' name='DOSHOOK.183'>183</a> <a class='f' name='CMDRTN'   >CMDRTN      </a>LDA #<a class='e' href='#MC'>MC</a>
+                    184             BNE <a class='x' href='#MODECK'>MODECK</a>                                      ; &darr; (always)
+                    <a class='line' name='DOSHOOK.185'>185</a> <a class='f' name='DRTNO'    >DRTNO       </a>LDA #<a class='e' href='#MO'>MO</a>                                         ; DoRoutineOut
+                    186             BNE <a class='x' href='#MODECK'>MODECK</a>                                      ; &darr; (always)
+                    <a class='line' name='DOSHOOK.187'>187</a> <a class='f' name='DRTNI'    >DRTNI       </a>LDA #<a class='e' href='#MI'>MI</a>                                         ; DoRoutineIn
+                    188 ;
+                    189 <a class='f' name='MODECK'   >MODECK      </a>EQU *                                           ; ModeCheck common entry
+                    190             AND <a class='v' href='#MONMOD'>MONMOD</a>      ; AND WITH MODE
+                    191             BEQ <a class='x' href='#ORTN'>ORTN</a>        ; BR IF NOT PRINT
+                    192 <a class='f' name='PRRTN'    >PRRNT       </a>JSR <a class='x' href='#LDREGS'>LDREGS</a>
+                    193             JSR <a class='x' href='#ORTN1'>ORTN1</a>
+                    194             STA <a class='v' href='#SVA'>SVA</a>         ;SAVE REGISTERS
+                    195             STY <a class='v' href='#SVY'>SVY</a>
+                    196             STX <a class='v' href='#SVX'>SVX</a>
+                    197 ;
+                    198 <a class='f' name='ORTN'     >ORTN        </a>EQU *
+                    199             JSR <a class='x' href='#MVCSW'>MVCSW</a>       ; GO MOVE CHAR I/O SWITCH
+                    200             LDX <a class='v' href='#SVSTK'>SVSTK</a>       ;RESTORE ORIGINAL STACK POINTER (YEEECH!)   ; /sarcasm And yet you're still futzing with the Stack Pointer
+                    201             TXS
+                    202 <a class='f' name='LDREGS'   >LDREGS      </a>EQU *
+                    203             LDA <a class='v' href='#SVA'>SVA</a>         ; ACU                           ; Captain Obvious
+                    204             LDY <a class='v' href='#SVY'>SVY</a>         ; Y                             ; is working
+                    205             LDX <a class='v' href='#SVX'>SVX</a>         ; X                             ; overtime today
+                    206             SEC             ;(FOR 'ESC' SCREEN FUNCTIONS)
+                    207             RTS             ; BY PASS PRINT
+                    208 ;
+                    209 <a class='f' name='ORTN1'    >ORTN1       </a>JMP (<a class='x' href='#OUTSW'>OUTSW</a>)
+                    210 ;
+                    211 ; PRRIF - PRINT CR IF MON CMDS
+                    212 ;
+                    213 <a class='f' name='PRCRIF'   >PRCRIF      </a>EQU *
+                    214             LDA #$<span class='n'>8D</span>        ; ELSE PRINT CR                 ; <a class='magic'>magic number</a> CR_HI
+1FCA:4C C5 1F       215             JMP ORTN1                                       ; <a class='mem' href='_1FCA'>wastes</a> 1 byte; BNE ORTN1
 
 
 <hr><hr class='join'>=== <a class="file" name="CMDSCAN">CMDSCAN</a> - Scan for commands, Page <a class="page" page="page16">16</a>, <a class='ts' href='#T0SE'>T0SE</a> - <a class='ts' href='#T1S0'>T1S0</a>, $<span class='n'>9FCD</span> .. $<span class='n'>A192</span> ===<hr class='join'><hr>
